# UATPTZLinux

./: .gitignore  CMakeLists.txt  README.md  UATPTZLinux.c  aulas.h  classes.h  compilaPTZLinux.c  data.h  layout.glade  load_presets.h  presetsload.h  resources.c  uatptzlinux.gresource.xml
